# cmakeTest

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  MyLibrary.cpp  MyLibrary.h
